--- a/tamil_nillam_ulpin/assets/css/styles.css
+++ b/tamil_nillam_ulpin/assets/css/styles.css
@@ -332,8 +332,8 @@ body {
 }
 
 .info-section {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+    padding: 5px;
+    
 }
 
 .info-section:last-child {
@@ -421,31 +421,57 @@ body {
 }
 
 .info-survey-section {
-    padding: 10px;
-    /* background-color: #f9f9f9; */
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 5px 5px;
+    column-gap: 10px;
+    width: 100%;
+    height: max-content;
     border-bottom: 1px solid #ddd;
-    font-size: 14px;
 }
+
+#rubai{
+    width: 16px;
+    padding-bottom: 6px;
+    filter: invert(29%) sepia(92%) saturate(746%) hue-rotate(130deg) brightness(93%) contrast(90%);
+}
+
+.district-icon.active #rubai{
+    padding-bottom: 6px;
+    filter: invert(100%);
+}
+
 
 .district-taluk-village {
     display: flex;
     justify-content: space-between;
-    padding: 10px 0;
+    padding: 5px 0;
+    column-gap: 5px;
+    width: 100%;
+    height: max-content;
 }
 
 .district-taluk-village div {
-    font-size: 14px;
+    font-size: 12px;
     color: #333;
+    border: 0.5px solid rgba(0, 0, 0, 0.137);
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.062);
+    border-radius: 20px;
 }
 
+.info-survey-section div {
+    font-size: 12px;
+    color: #333;
+}
 .district-taluk-village strong {
     color: #555;
 }
 
 .lgd-codes {
-    font-size: 14px;
+    font-size: 12px;
     color: #555;
-    margin-top: 10px;
+    margin-top: 4px;
 }
 
 .lgd-codes div {
@@ -469,8 +495,9 @@ body {
 .info-icons {
     display: inline-flex;
     gap: 10px;
-    margin-left: 20px;
     vertical-align: middle;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .info-icons i {
@@ -486,24 +513,19 @@ body {
     align-items: center;
 }
 
-.info-icons .district-icon {
-    background-color: #ff6f61;
-    /* Example: Red for District */
+.district-icon{
+    color: #336c7b!important;
+    background-color: white!important;
+    padding: 5px 12px!important;
+    border-radius: 10px!important;
+    border: 1px solid rgba(0, 0, 0, 0.233)!important;
+    
 }
-
-.info-icons .taluk-icon {
-    background-color: #1e90ff;
-    /* Example: Blue for Taluk */
-}
-
-.info-icons .village-icon {
-    background-color: #28a745;
-    /* Example: Green for Village */
-}
-
-.info-icons .land-value-icon {
-    background-color: #df16a3;
-    /* Example: Green for Village */
+.district-icon.active{
+    background-color: #336c7b!important;
+    color: rgb(255, 255, 255)!important;
+    border: inset 10px solid white;
+    
 }
 
 .info-icons i:hover {
@@ -633,6 +655,12 @@ body {
     /* Adjust based on panel header and tabs height */
     overflow-y: auto;
     padding: 10px;
+}
+.tab-content{
+    border: 1px solid #4b4b4b0c;
+    padding: 9px;
+    border-radius: 20px;
+    margin: 10px -2px;
 }
 
 #areg-info-panel table {
@@ -920,7 +948,7 @@ header{
 }
 
 .offcanvas.offcanvas-start.menu{
-    background-color: rgba(255, 255, 255, 0.133);
+    background-color: rgba(0, 60, 100, 0.966);
     backdrop-filter: blur(5px);
 }
 .offcanvas.offcanvas-start.menu,
@@ -965,12 +993,11 @@ header{
     border: none;
 }
 .offcanvas.offcanvas-end.menu{
-    background-color: rgba(255, 255, 255, 0.133);
+    background-color: rgb(255, 255, 255);
     height: min-content;
     border-radius: 20px;
     padding: 10px;
     backdrop-filter: blur(5px);
-    
     border: none;
 }
 
@@ -978,9 +1005,13 @@ header{
     padding: 4px 10px;
     border-radius: 10px;
     background-color: #003f7f;
-    color: rgb(213, 194, 118);
+    color: rgb(255, 255, 255);
     width: 100%;
     margin: 5px 0px;
+}
+.dropdowns option{
+    background-color: white;
+    color:#003f7f ;
 }
 
 .listings{
@@ -996,10 +1027,10 @@ header{
     display: flex;
     position: fixed;
     bottom: 10%;
-    right: 2rem;
+    right: 0rem;
     flex-direction: column;
-    z-index: 1200;
-    /* background-color: #dcdcdc94; */
+    z-index: 95;
+    align-items: center;
   }
   .gears a{
     box-shadow: none;
@@ -1082,7 +1113,7 @@ header{
   }
   .rotation-right:hover,
   .rotation-left:hover{
-  background-color:rgb(213, 194, 118);
+  background-color:rgb(167, 167, 167);
   }
   .rotation-left{
   padding-left: 25px;
@@ -1130,9 +1161,9 @@ header{
 
   
 .layer-btns{
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 10px;
     box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
     display: flex;
     justify-content: center;
@@ -1140,32 +1171,31 @@ header{
     font-size: 1.2rem;
     margin-top: 10px;
     cursor: pointer;
-    background-color: #003f7f;
-    color: rgb(213, 194, 118);
+    background-color: #ffffff;
+    color: rgb(0 38 117);
     transition: all 0.2s ease;
     margin-right: 20px;
     border: none;
-    }
+}
     .layer-btns.rotation{
       color: var(--primary);
       /* background-color:#ffffff; */
       }
       .layer-btns.rotation:hover,.layer-btns:hover {
-        color: #003f7f;
-        background-color: rgb(213, 194, 118);
+        color: #ffffff;
+        background-color: rgb(0 38 117)!important;
       }
     
     .layer-btns:hover{
     box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
     }
     .north{
-        width: 20px;
-        filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.609)) invert(100%);
+        width: 30px;
         margin-top: -5px;
     }
     .maptype {
         display: inline-block;
-        padding: 8px 12px;
+        padding: 4px 12px;
         border: 2px solid #ccc;
         border-radius:20px;
         cursor: pointer;
@@ -1186,7 +1216,12 @@ header{
     .accordion-item,.accordion-item .accordion-button{
         border-radius: 20px 20px 20px 20px!important;
     }
-
+    .accordion-button{
+        padding: 6px 1.25rem!important;
+    }
+    .offcanvas-body{
+        padding: 0.25rem!important;
+    }
 button.accordion-button{
     background-color: #003f7f!important;
 }
@@ -1211,13 +1246,16 @@ filter: invert(100%);
     pointer-events: auto;
     top: 10%;
     left: 2rem;
-    /* left: 50%; */
+    max-width: 440px!important;
     cursor: auto;
     /* transform: translateX(-50%)!important; */
     margin: 0px 0px!important;
 }
 .modal-body{
     cursor: initial;
+}
+.modal-header{
+    padding: 4px 1rem!important;
 }
 
 .modal-header {
@@ -1228,7 +1266,7 @@ filter: invert(100%);
 }
 
 .modal-content{
-    background-color: #ffffffa8!important;
+    background-color: #ffffff!important;
     border-radius: 20px!important;
 }
 
@@ -1242,3 +1280,34 @@ filter: invert(100%);
     border: 1px solid #ccc;
   }
 
+
+
+.lpi-modal-body{
+    padding: 0px!important;
+}
+
+/* Scrollable tab content */
+.tab-content {
+    border: 1px solid #ddd;
+    padding: 15px;
+    background: #f9f9f9;
+}
+
+/* Style for tabs */
+.nav-tabs .nav-link {
+    color: #495057;
+    border: 1px solid #dee2e6;
+    padding: 0.5rem 1rem;
+}
+
+.nav-tabs .nav-link.active {
+    background-color: #007bff;
+    color: white;
+}
+
+#areg-tab-container{
+    max-height: 400px;
+}
+#staticBackdrop #lpi-container{
+    font-size: 12px;
+}
