--- a/tamil_nillam_ulpin/assets/css/styles.css
+++ b/tamil_nillam_ulpin/assets/css/styles.css
@@ -52,7 +52,7 @@ body {
 #title {
     font-size: 20px;
     font-weight: bold;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
     color: var(--secondary-color);
 }
 
@@ -1001,6 +1001,8 @@ header{
     padding: 10px;
     backdrop-filter: blur(5px);
     border: none;
+    font-size: 12px;
+    width: 25%;
 }
 
 .dropdowns select{
@@ -1221,6 +1223,7 @@ header{
     }
     .accordion-button{
         padding: 6px 1.25rem!important;
+        font-size: 12px !important;
     }
     .offcanvas-body{
         padding: 0.25rem!important;
@@ -1331,4 +1334,24 @@ filter: invert(100%);
 .mousePosition{
     color: #fff;
     font-size: 12px;
+}
+.offcanvas-header{
+    padding: 1rem 1rem 0rem 0rem !important;
+}
+.more_info{
+    position: relative;
+    top: 70px;
+    font-size: 12px;
+    z-index: 2;
+    width: 100%;
+    text-align: -webkit-center;
+}
+.more_info_content{
+    background-color: #003f7f;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    padding: 6px;
+    border-radius: 10px;
+    width: 20%;
 }
