--- a/tamil_nillam_ulpin/assets/css/styles.css
+++ b/tamil_nillam_ulpin/assets/css/styles.css
@@ -521,12 +521,17 @@ body {
 }
 
 .district-icon{
-    color: #336c7b!important;
-    background-color: white!important;
-    padding: 8px!important;
-    border-radius: 10px!important;
-    border: 1px solid rgba(0, 0, 0, 0.233)!important;
-    
+    /* color: #336c7b!important; */
+    /* background-color: white!important; */
+    padding: 0px!important;
+    border-radius: 20px!important;
+    border: none !important;
+    width: 35px;    
+}
+
+.district-icon img{
+    width: 100%;
+    object-fit: cover;
 }
 /* .district-icon :hover{
     transform: scale(1.4);
@@ -1502,10 +1507,23 @@ filter: invert(100%);
     transition: all 0.1s ease-in-out;
 
 }
-.JSB-icon-card:hover, .thematic-icon-card:hover, .thematic-icon-card.active{
+ .thematic-icon-card:hover, .thematic-icon-card.active{
     background: #e0e0e0 !important;
     transform: scale(1.1);
     transition: all 0.1s ease-in-out;
+}
+.JSB-icon-card:hover,.JSB-icon-card.active{
+    /* background: linear-gradient(to right, rgb(26 49 102), rgb(25 47 82)) !important; */
+    transform: scale(1.1);
+    transition: all 0.1s ease-in-out;
+}
+.JSB-icon-card img{
+    width: 100%;
+    height: 50px;
+    padding: 5px;
+    margin: 0px;
+    border-radius: 10px;
+    background:linear-gradient(to right, rgb(26 49 102), rgb(25 47 82));
 }
 @keyframes glowBorder {
     0% {
@@ -1635,9 +1653,68 @@ filter: invert(100%);
     width: 350px;
 }
 .bgcolordiv{
-    background: linear-gradient(45deg, #061841, #3c7d87);
+    background: #fff;
 }
 #toast-container > .toast {
     width: 400px !important;  /* Adjust as needed */
     height: 64px !important;  /* Or set a fixed height like 100px */
+}
+.font-size-9{
+    font-size: 8px !important;
+    font-weight: 500;
+    margin: 0px;
+    padding-top: 4px;
+}
+.facility-list{
+    list-style: none;
+    padding: 0px;
+}
+.facilities-details {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 15px;
+    font-size: 10px !important;
+}
+
+.facility-name {
+    flex: 2;
+    text-align: left;
+}
+
+.facility-distance {
+    flex: 1;
+    text-align: left;
+    color: red;
+}
+
+.facility-action {
+    flex: 0;
+}
+
+.facility-action img {
+    width: 20px;
+    height: 20px;
+}
+
+.thematic-icon-card.active {
+    transform: scale(1.1);
+    border: 2px solid #42abff;
+    background: #e6f3ff;
+}
+.thematic-icon-card {
+    transition: transform 0.3s, border 0.3s, background 0.3s;
+}
+.district-icon-active{
+    filter: hue-rotate(-401deg) brightness(124%);
+    transform: scale(1.1);
+    transition: all 0.1s ease-in-out;
+}
+.JSB-icon-card-active{
+    background: linear-gradient(to right, rgb(39 94 222), rgb(0 71 184)) !important;
+}
+.JSB-icon-card-active:focus {
+    outline: none; /* Removes default focus outline */
+    background: linear-gradient(to right, rgb(50, 130, 255), rgb(10, 90, 220)) !important; /* Slightly different gradient for focus */
 }
